--- a/people-api/package.json
+++ b/people-api/package.json
@@ -1,17 +1,13 @@
 {
   "name": "people-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.18.0"
   }
 }
