--- a/people-manager/package.json
+++ b/people-manager/package.json
@@ -2,12 +2,8 @@
   "name": "people-manager",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+  "build": "ng build --prod",
+  "start": "node server.js"
   },
   "private": true,
   "dependencies": {
